deploy/argocd/apps/istio-gateway/resources/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  # HTTP listener
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All  # Allow HTTPRoute from any namespace

  # HTTPS listener
  - name: https
    hostname: "*.gigix"
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All  # Allow HTTPRoute from any namespace
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: wildcard-gigix-tls
        # Secret in same namespace (istio-system) - wildcard cert for *.gigix
